--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,5 +10,13 @@
     <li><a href="users">Users</a></li>
     <li><a href="meals">Meals</a></li>
 </ul>
+<form method="post" action="users" style="font-size: large">
+    <b>Choose user</b>
+    <select name="userId">
+        <option value="1">UserOne</option>
+        <option value="2">UserTwo</option>
+    </select>
+    <button type="submit">Select</button>
+</form>
 </body>
 </html>
